--- a/book/ch2.Rmd
+++ b/book/ch2.Rmd
@@ -25,7 +25,7 @@ AKesp::esp_metrics(
 dat <- AKesp::get_esp_data("Alaska Sablefish") %>%
   AKesp::check_data() # add NA columns if any columns are missing
 
-AKesp::esp_cor_matrix_long(
+AKesp::esp_cor_matrix(
   data = dat,
   out = "ggplot"
 )
@@ -33,7 +33,7 @@ AKesp::esp_cor_matrix_long(
 
 ### Indicator histograms
 ```{r, fig.width = 10, fig.height = 20}
-AKesp::esp_hist_long(
+AKesp::esp_hist(
   data = dat,
   out = "ggplot"
 )
@@ -42,7 +42,7 @@ AKesp::esp_hist_long(
 ### Traffic plots
 Traffic light plots are broken into multiple images, each with 5 plots.
 ```{r, fig.width = 8, fig.height = 10}
-AKesp::esp_traffic_long(
+AKesp::esp_traffic(
   data = dat,
   paginate = TRUE,
   out = "ggplot",
@@ -58,7 +58,7 @@ Tables can be automatically created from the `table_spreadsheet.csv` and the `.c
 
 A traffic light table can be automatically created from a spreadsheet that has a column for year and a column for each indicator.
 ```{r}
-AKesp::esp_traffic_tab_long(
+AKesp::esp_traffic_tab(
   data = dat,
   year = 2021
 )
@@ -66,7 +66,7 @@ AKesp::esp_traffic_tab_long(
 
 Multiple years can be shown.
 ```{r}
-AKesp::esp_traffic_tab_long(
+AKesp::esp_traffic_tab(
   data = dat,
   year = 2017:2021
 )
