--- a/inst/figure-child.Rmd
+++ b/inst/figure-child.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(fig.cap = alt)
 
 
 ```{r, traffic-eco, fig.height = 7, fig.width = 6, eval = params$esp_type == "report_card"}
-AKesp::esp_traffic_long(
+AKesp::esp_traffic(
   dat = params$esp_data %>%
     dplyr::filter(INDICATOR_TYPE == "Ecosystem"),
   paginate = TRUE,
@@ -37,7 +37,7 @@ knitr::opts_chunk$set(fig.cap = alt)
 
 
 ```{r, traffic-socio, fig.height = 7, fig.width = 6, eval = "Socioeconomic" %in% params$esp_data$INDICATOR_TYPE & params$esp_type == "report_card"}
-AKesp::esp_traffic_long(
+AKesp::esp_traffic(
   dat = params$esp_data %>%
     dplyr::filter(INDICATOR_TYPE == "Socioeconomic"),
   paginate = TRUE,
