--- a/vignettes/create-figures.Rmd
+++ b/vignettes/create-figures.Rmd
@@ -34,9 +34,11 @@ AKesp::esp_metrics(
 
 ## Correlation matrices
 ```{r, fig.width = 15, fig.height = 20}
-dat <- AKesp::get_esp_data("Alaska Sablefish")
+`%>%` <- magrittr::`%>%`
+dat <- AKesp::get_esp_data("Alaska Sablefish") %>%
+  AKesp::check_data()
 
-AKesp::esp_cor_matrix_long(
+AKesp::esp_cor_matrix(
   data = dat,
   out = "ggplot"
 )
@@ -44,7 +46,7 @@ AKesp::esp_cor_matrix_long(
 
 ## Indicator histograms
 ```{r, fig.width = 10, fig.height = 20}
-AKesp::esp_hist_long(
+AKesp::esp_hist(
   data = dat,
   out = "ggplot"
 )
@@ -53,7 +55,7 @@ AKesp::esp_hist_long(
 ## Traffic plots
 Traffic light plots are broken into multiple images, each with 5 plots.
 ```{r, fig.width = 8, fig.height = 10}
-AKesp::esp_traffic_long(
+AKesp::esp_traffic(
   data = dat,
   paginate = TRUE,
   out = "ggplot",
