--- a/inst/figure-child.Rmd
+++ b/inst/figure-child.Rmd
@@ -43,7 +43,7 @@ s_dat <- esp_data %>%
 
 if(nrow(s_dat) > 0) {
   AKesp::esp_traffic(
-  dat = ,
+  dat = s_dat,
   paginate = TRUE,
   caption = cap,
   ncolumn = params$ncolumn,
