--- a/inst/figure-child.Rmd
+++ b/inst/figure-child.Rmd
@@ -48,7 +48,8 @@ if(nrow(s_dat) > 0) {
   caption = cap,
   ncolumn = params$ncolumn,
   min_year = params$min_year,
-  chunk_label = "traffic-socio"
+  chunk_label = "traffic-socio",
+  skip_lines = params$skip_lines
 )
 }
 
